# Django-portfolio

./: .dockerignore  .env-template  .gitignore  Dockerfile  LICENCE.md  Pipfile  README.md  aws_s3.py  create_postgres_database.sh  create_s3bucket.py  db.json  decouple_rds.md  deploy.sh  docker-compose-proxy.yml  eb_setenv-template.sh  orphan_branch.sh  pyproject.toml  requirements.txt  run.sh
.ebextensions/: db-migrate.config  django.config
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: all_blogs.html  detail.html
personal_portfolio/: settings.py  urls.py
portfolio/: models.py  views.py
portfolio/management/commands/: createsu.py
portfolio/migrations/: 0001_initial.py
portfolio/templates/portfolio/: about.html  base.html  home.html
proxy/: .dockerignore  docker-task.sh
proxy/.github/workflows/: docker-image.yml
scripts/: entrypoint.sh
terraform/: Makefile  dev.tfvars  main.tf  outputs.tf  terraform.tfstate
